WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281813
[WPE] ASSERTION FAILED: local-file-error API test asserts and crashes
https://bugs.webkit.org/show_bug.cgi?id=281813
Summary
[WPE] ASSERTION FAILED: local-file-error API test asserts and crashes
Claudio Saavedra
Reported
2024-10-19 01:11:32 PDT
WPE with assertions enabled in Release, likely occurring also in Debug: /webkit/Downloads/local-file-error: CRASH SHOULD NEVER BE REACHED /app/webkit/Source/WebKit/NetworkProcess/Downloads/DownloadManager.cpp(130) : void WebKit::DownloadManager::cancelDownload(WebKit::DownloadID, WTF::CompletionHandler<void(std::span<const unsigned char>)>&&) 1 0x7ff67cffbe14 WebKit::DownloadManager::cancelDownload(WTF::ObjectIdentifierGeneric<WebKit::DownloadIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long>, unsigned long>, WTF::CompletionHandler<void (std::span<unsigned char const, 18446744073709551615ul>)>&&) 2 0x7ff67cadbab1 void IPC::handleMessageAsync<Messages::NetworkProcess::CancelDownload, IPC::Connection, WebKit::NetworkProcess, WebKit::NetworkProcess, void (WTF::ObjectIdentifierGeneric<WebKit::DownloadIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long>, unsigned long>, WTF::CompletionHandler<void (std::span<unsigned char const, 18446744073709551615ul>)>&&)>(IPC::Connection&, IPC::Decoder&, WebKit::NetworkProcess*, void (WebKit::NetworkProcess::*)(WTF::ObjectIdentifierGeneric<WebKit::DownloadIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long>, unsigned long>, WTF::CompletionHandler<void (std::span<unsigned char const, 18446744073709551615ul>)>&&)) 3 0x7ff67cae0d29 WebKit::NetworkProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 4 0x7ff67d12a6fd IPC::Connection::dispatchMessage(WTF::UniqueRef<IPC::Decoder>) [clone .part.0] 5 0x7ff67d12aeba IPC::Connection::dispatchOneIncomingMessage() 6 0x7ff67f50322f WTF::RunLoop::performWork() 7 0x7ff67f5d0249 WTF::RunLoop::RunLoop()::{lambda(void*)#1}::_FUN(void*) 8 0x7ff67f5d168f WTF::RunLoop::{lambda(_GSource*, int (*)(void*), void*)#1}::_FUN(_GSource*, int (*)(void*), void*) 9 0x7ff677cd6d36 g_main_context_dispatch 10 0x7ff677d342b8 g_main_context_iterate.isra.0 11 0x7ff677cd63ff g_main_loop_run 12 0x7ff67f5d17c8 WTF::RunLoop::run() 13 0x7ff67d088bca WebKit::NetworkProcessMain(int, char**) 14 0x7ff67743b08a __libc_start_call_main 15 0x7ff67743b14b __libc_start_main 16 0x564dac1447e5 _start ASSERTION FAILED: PtrTraits::unwrap(m_ptr)->ptrCountWithoutThreadCheck() /app/webkit/WebKitBuild/WPE/Release/WTF/Headers/wtf/CheckedRef.h(110) : T* WTF::CheckedRef<T, <template-parameter-1-2> >::ptr() const [with T = WebKit::DownloadProxyMap; PtrTraits = WTF::RawPtrTraits<WebKit::DownloadProxyMap>] 1 0x7f308abfdda4 WTF::Detail::CallableWrapper<IPC::Connection::makeAsyncReplyCompletionHandler<Messages::NetworkProcess::CancelDownload, WebKit::DownloadProxy::cancel(WTF::CompletionHandler<void (API::Data*)>&&)::{lambda(std::span<unsigned char const, 18446744073709551615ul>)#1}>(WebKit::DownloadProxy::cancel(WTF::CompletionHandler<void (API::Data*)>&&)::{lambda(std::span<unsigned char const, 18446744073709551615ul>)#1}&&, WTF::ThreadLikeAssertion)::{lambda(IPC::Decoder*)#1}, void, IPC::Decoder*>::call(IPC::Decoder*) 2 0x7f308a9938f1 WTF::Detail::CallableWrapper<WebKit::AuxiliaryProcessProxy::sendMessage(WTF::UniqueRef<IPC::Encoder>&&, WTF::OptionSet<IPC::SendOption>, std::optional<IPC::ConnectionAsyncReplyHandler>, WebKit::AuxiliaryProcessProxy::ShouldStartProcessThrottlerActivity)::{lambda(IPC::Decoder*)#1}, void, IPC::Decoder*>::call(IPC::Decoder*) 3 0x7f308a92031a IPC::Connection::cancelAsyncReplyHandlers() 4 0x7f308a9241be IPC::Connection::invalidate() 5 0x7f308a99f202 WebKit::AuxiliaryProcessProxy::~AuxiliaryProcessProxy() 6 0x7f308ac423b9 WebKit::NetworkProcessProxy::~NetworkProcessProxy() 7 0x7f308aa29ee4 WTF::Ref<WebKit::NetworkProcessProxy, WTF::RawPtrTraits<WebKit::NetworkProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::NetworkProcessProxy> >::~Ref() 8 0x7f308ac3dc07 WebKit::NetworkProcessProxy::networkProcessDidTerminate(WebKit::ProcessTerminationReason) 9 0x7f308a92447c WTF::Detail::CallableWrapper<IPC::Connection::dispatchDidCloseAndInvalidate()::{lambda()#1}, void>::call() 10 0x7f308cd0322f WTF::RunLoop::performWork() 11 0x7f308cdd0249 WTF::RunLoop::RunLoop()::{lambda(void*)#1}::_FUN(void*) 12 0x7f308cdd168f WTF::RunLoop::{lambda(_GSource*, int (*)(void*), void*)#1}::_FUN(_GSource*, int (*)(void*), void*) 13 0x7f309181fd36 g_main_context_dispatch 14 0x7f309187d2b8 g_main_context_iterate.isra.0 15 0x7f309181f3ff g_main_loop_run 16 0x556409ba209e DownloadTest::downloadURIAndWaitUntilFinished(WTF::CString const&) 17 0x556409ba5e1b testDownloadLocalFileError(DownloadErrorTest*, void const*) 18 0x7f309184b48e g_test_run_suite_internal 19 0x7f309184b3ab g_test_run_suite_internal 20 0x7f309184b3ab g_test_run_suite_internal 21 0x7f309184b9ea g_test_run_suite 22 0x7f309184ba80 g_test_run 23 0x556409baae67 main 24 0x7f307fa3b08a __libc_start_call_main 25 0x7f307fa3b14b __libc_start_main 26 0x556409b9d545 _start
Attachments
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2024-10-19 01:27:23 PDT
Gardened in
https://commits.webkit.org/285467@main
zsun
Comment 2
2024-12-09 07:17:17 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37640
EWS
Comment 3
2024-12-11 08:47:42 PST
Committed
287675@main
(ea82aedda965): <
https://commits.webkit.org/287675@main
> Reviewed commits have been landed. Closing PR #37640 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug